--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ VITE_AUTH0_CALLBACK_URL=http://localhost:5173
 
 
 
-# VITE_API_BASE_URL=http://localhost:7000
+VITE_API_BASE_URL=http://localhost:7000
 # https://delivery-app-swiggy-backend.onrender.com/health
-VITE_API_BASE_URL=https://delivery-app-swiggy-backend.onrender.com/health
+# VITE_API_BASE_URL=https://delivery-app-swiggy-backend.onrender.com/health
 
 VITE_AUTH0_AUDIENCE=mern-food-delivery-app-api
 
