--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-aspect-ratio": "^1.1.4",
+    "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.4",
