--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ VITE_AUTH0_CALLBACK_URL=http://localhost:5173
 
 # https://delivery-app-swiggy-backend.onrender.com/health
 
-# VITE_API_BASE_URL=http://localhost:7000
-VITE_API_BASE_URL=https://delivery-app-swiggy-backend.onrender.com/health
+VITE_API_BASE_URL=http://localhost:7000
+# VITE_API_BASE_URL=https://delivery-app-swiggy-backend.onrender.com
 
 
 
