--- a/.env
+++ b/.env
@@ -2,10 +2,12 @@ VITE_AUTH0_DOMAIN=dev-1dxxtwktlu7pj3nq.us.auth0.com
 VITE_AUTH0_CLIENT_ID=L1YEUt5zHfSrs394P2m8apWjLs1WGeE1
 VITE_AUTH0_CALLBACK_URL=http://localhost:5173
 
-# https://delivery-app-swiggy-backend.onrender.com/health
 
-VITE_API_BASE_URL=http://localhost:7000
-# VITE_API_BASE_URL=https://delivery-app-swiggy-backend.onrender.com
+# VITE_API_BASE_URL=http://localhost:7000
+# https://delivery-app-swiggy-backend.onrender.com/
+VITE_API_BASE_URL=https://delivery-app-swiggy-backend.onrender.com/
+
+
 
 
 
